Resolve contrast ratio issue in "secondary" badges
Fixes #29

- Change "secondary" color from #959595 to #767676

- New contrast ratio is 4.5:1 (obtained from Colour Contrast Analyser - https://www.tpgi.com/color-contrast-checker/)

--- a/assets/scss/techtoolbox-bootstrap.scss
+++ b/assets/scss/techtoolbox-bootstrap.scss
@@ -4,7 +4,7 @@ $code-color: #8d3886;
 $link-color: #3b77c1;
 
 $primary: #1e4173;
-$secondary: #959595;
+$secondary: #767676;
 $success: #1e7325;
 $danger: #bd1c1c;
 $info: #3b77c1;
